INTYG-4600: ska nu gå att byta mellan olika koder och få rätt trunkering

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -27,7 +27,7 @@
             <div ng-if="atgarderError">
                 <wc-srs-error-box message-string="atgarderError"></wc-srs-error-box>
             </div>
-            <div id="atgarderObs" ng-if="status.open && parentHasRendered()" clamp="3">{{atgarder.atgarderObs}}</div>
+            <div id="atgarderObs" ng-if="status.open && atgarder && atgarder.atgarderObs && parentHasRendered()" clamp="3">{{atgarder.atgarderObs}}</div>
                 <br><br>
     
             <h3>Rekommenderade åtgärder</h3>
