--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/dodsorsakTerminalFoljd.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/dodsorsakTerminalFoljd.formly.html
@@ -1,5 +1,5 @@
 <div>
-  <dodsorsak-row model="model" key="options.key" template-options="to" validation="formState.viewState.common.validation"></dodsorsak-row>
+  <dodsorsak-row model="model" require-description="true" key="options.key" template-options="to" validation="formState.viewState.common.validation"></dodsorsak-row>
 
   <div ng-repeat="orsak in model.foljd track by $index">
     <dodsorsak-row model="model" key="to.foljd.key" row-index="$index" template-options="to.foljd" validation="formState.viewState.common.validation"></dodsorsak-row>
