INTYG-4783: Fast storlek på datumkolumn.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/dodsorsakMulti.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/dodsorsakMulti.formly.html
@@ -4,7 +4,7 @@
       <th style="width: 60%;"><span dynamic-label key="{{to.beskrivningLabel}}.RBK"></span> <span wc-help-chevron help-text-key="{{to.beskrivningLabel}}.HLP"></span>
         <span wc-help-chevron-text help-text-key="{{to.beskrivningLabel}}.HLP"></span>
       </th>
-      <th><span dynamic-label key="{{to.datumLabel}}.RBK"></span> <span wc-help-chevron help-text-key="{{to.datumLabel}}.HLP"></span>
+      <th class="date-width"><span dynamic-label key="{{to.datumLabel}}.RBK"></span> <span wc-help-chevron help-text-key="{{to.datumLabel}}.HLP"></span>
         <span wc-help-chevron-text help-text-key="{{to.datumLabel}}.HLP"></span></th>
       <th><span dynamic-label key="{{to.orsakLabel}}.RBK"></span> <span wc-help-chevron help-text-key="{{to.orsakLabel}}.HLP"></span>
         <span wc-help-chevron-text help-text-key="{{to.orsakLabel}}.HLP"></span>
