INTYG-4836: Fixat felmeddelande för datum i terminaldodsorsak DOI

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/dodsorsakRow.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/dodsorsakRow.directive.html
@@ -47,4 +47,5 @@
   </div>
 
   <wc-field-validation field-type="dodsorsak" validations="orsakValidations"></wc-field-validation>
+  <wc-field-validation field-type="date" validations="dateValidations"></wc-field-validation>
 </div>
