INTYG-4781: Maxtecken på DOI.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/dodsorsakMulti.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/dodsorsakMulti.formly.html
@@ -18,7 +18,7 @@
                ng-class="{'fielderror' : hasValidationError('beskrivning', $index)}"
                ng-model="orsak.beskrivning"
                ng-blur="validate()"
-               maxlength="4000">
+               maxlength="{{to.maxlength}}">
       </td>
       <td>
         <span wc-date-picker-field target-model="orsak.datum" dom-id="orsak-multi-{{$index}}-datum"
