INTYG-4651: ingen radioknapp vald om ett INGET hämtats för getConsent

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
@@ -49,7 +49,7 @@
           </div>
           <br>
           <br>
-          <div id="collapseExample" class="panel-collapse collapse">
+          <div id="collapseExample" class="panel-collapse collapse in">
             <wc-srs-questionaire></wc-srs-questionaire>
           </div>
             <wc-srs-result></wc-srs-result>
