--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/radioGroup.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/radioGroup.formly.html
@@ -1,7 +1,7 @@
 <div class="form-group">
   <wc-form-label to="to" key="options.key"></wc-form-label>
-  <div class="form-group form-inline" data-ng-repeat="choice in to.choices">
-    <label class="radio">
+  <div class="form-group radio" data-ng-repeat="choice in to.choices">
+    <label class="big-radio-label">
       <input id="{{options.key}}-{{choice}}" type="radio" name="{{options.key}}" class="big-radio" ng-model="model[options.key]" value="{{choice}}">
       <span dynamic-label key="{{to.code}}.{{choice}}.RBK"></span>
     </label>
