INTYG-4781: Lagt till maxlength defaultvärde

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/dodsorsakRow.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/dodsorsakRow.directive.html
@@ -15,7 +15,7 @@
              ng-class="{'fielderror' : hasValidationError('beskrivning', rowIndex)}"
              ng-model="modelValue.beskrivning"
              ng-blur="validate()"
-             maxlength="{{to.maxlength}}">
+             maxlength="{{to.maxlength || 3500}}">
       <span class="dodsorsak-row__letter">{{letter}}</span>
     </div>
     <div class="">
