INTYG-4776: Styling på intygstypsrubrik i view-read-only

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/read-only-view/wcIntygReadOnlyView.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/read-only-view/wcIntygReadOnlyView.template.html
@@ -1,7 +1,7 @@
 <div class="wc-intyg-read-only container-fluid">
   <div wc-spinner label="common.load.certificate" show-spinner="!viewState.doneLoading"
        show-content="viewState.doneLoading">
-    <h1>{{viewState.certName}}</h1>
+    <h1 class="page-title">{{viewState.certName}}</h1>
     <div ng-show="!viewState.errorKey">
       <div id="read-only-certificate">
 
