--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
@@ -11,10 +11,11 @@
         <span message key="draft.completion.signinfo"></span>
       </p>
       <button type="button" id="signera-utkast-button" class="btn btn-success"
-              ng-disabled="certForm.$dirty || signingWithSITHSInProgress"
+              ng-disabled="certForm.$dirty || (getCurrentSignStatus() === 'pending')"
               ng-keydown="initValidationSequence('signera-utkast-button')"
               ng-mousedown="initValidationSequence('signera-utkast-button')"
-              ng-click="sign()"><img ng-show="signingWithSITHSInProgress" ng-src="/img/ajax-loader-small-green.gif" />
+              ng-click="sign()">
+        <img ng-show="getCurrentSignStatus() === 'pending'" ng-src="/img/ajax-loader-small-green.gif" />
         <span message key="common.{{isSignAndSendOrKomp() ? 'signsend' : 'sign'}}"></span>
       </button>
 
