INTYG-4862: Specifika texter för makuleringsdialog beroende på intygstyp med fallback.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygMakulera.dialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygMakulera.dialog.html
@@ -7,7 +7,7 @@
 <div class="modal-body">
   <div class="form-group">
     <div style="padding-bottom: 10px">
-      <span message key="label.makulera.body.common-header"></span>
+      <span message key="{{model.bodyTextId}}"></span>
       <span ng-if="model.hasUnhandledArenden" message key="label.makulera.body.has-arenden.addition"></span>
       <br><br>
       <span message key="label.makulera.body.common-footer"></span>
