--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/js/directives/fk7263.SelectableFieldList.directive.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/js/directives/fk7263.SelectableFieldList.directive.html
@@ -20,10 +20,10 @@
                                field-configs="[fieldConfig.diagnos]" summary="summary">
     <div selectable-field-wrapper label-key="fk7263.label.diagnosisCode" cert-model="cert"
          field-config="fieldConfig.diagnos" summary="summary" show-deselected="showDeselected">
-      <div>
+      <div class="inline-single-value">
         <span id="diagnosKod">{{cert.diagnosKod}}</span>
       </div>
-      <div ng-if="cert.diagnosBeskrivning">
+      <div ng-if="cert.diagnosBeskrivning" class="inline-single-value">
         <h4><span message key="fk7263.label.diagnosfortydligande"></span></h4>
         <span id="diagnosBeskrivning" class="multiline">{{cert.diagnosBeskrivning}}</span>
       </div>
@@ -59,22 +59,22 @@
          cert-model="cert" field-config="fieldConfig.intygetBaserasPa" summary="summary"
          show-deselected="showDeselected">
 
-      <div ng-if="cert.undersokningAvPatienten!=null">
+      <div ng-if="cert.undersokningAvPatienten!=null" class="inline-single-value">
         <div id="undersokningAvPatienten">
           <h4><span message key="fk7263.vardkontakt.undersokning"></span></h4><span>  {{cert.undersokningAvPatienten | date:'shortDate' }}</span>
         </div>
       </div>
-      <div ng-if="cert.telefonkontaktMedPatienten !=null">
+      <div ng-if="cert.telefonkontaktMedPatienten !=null" class="inline-single-value">
         <div id="telefonkontaktMedPatienten">
           <h4><span message key="fk7263.vardkontakt.telefonkontakt"></span></span></h4><span>  {{cert.telefonkontaktMedPatienten | date:'shortDate' }}</span>
         </div>
       </div>
-      <div ng-if="cert.journaluppgifter!=null">
+      <div ng-if="cert.journaluppgifter!=null" class="inline-single-value">
         <div id="journaluppgifter">
           <h4><span message key="fk7263.referens.journal"></span></h4><span>  {{cert.journaluppgifter | date:'shortDate' }}</span>
         </div>
       </div>
-      <div ng-if="cert.annanReferens!=null">
+      <div ng-if="cert.annanReferens!=null" class="inline-single-value">
         <div id="annanReferens">
           <h4><span message key="fk7263.referens.annat"></span></h4>
           <div>{{cert.annanReferens | date:'shortDate' }}</div>
@@ -100,12 +100,12 @@
          cert-model="cert" field-config="fieldConfig.rekommendationerUtomForetagsHalsoVard" summary="summary"
          show-deselected="showDeselected">
 
-      <div>
+      <div class="inline-single-value">
         <h4><span message key="fk7263.label.recommendations.contact.jobcenter"></span></h4>
         <span ng-if="cert.rekommendationKontaktArbetsformedlingen">Ja</span>
         <span ng-if="!cert.rekommendationKontaktArbetsformedlingen">Nej</span>
       </div>
-      <div ng-if="cert.rekommendationOvrigt.length > 0">
+      <div ng-if="cert.rekommendationOvrigt.length > 0" class="inline-single-value">
         <h4><span message key="fk7263.label.recommendations.contact.other"></span></h4>
         <span class="multiline">{{cert.rekommendationOvrigt}}</span>
       </div>
@@ -131,11 +131,11 @@
     <div selectable-field-wrapper label-key="{{summary ? 'fk7263.label.plannedtreatment' : ''}}" cert-model="cert"
          field-config="fieldConfig.planeradBehandling" summary="summary" show-deselected="showDeselected">
 
-      <div ng-if="cert.atgardInomSjukvarden">
+      <div ng-if="cert.atgardInomSjukvarden" class="inline-single-value">
         <h4><span message key="fk7263.label.plannedtreatment.healthcare"></span></h4>
         <div id="plannedtreatment.healthcare" class="multiline">{{cert.atgardInomSjukvarden}}</div>
       </div>
-      <div ng-if="cert.annanAtgard">
+      <div ng-if="cert.annanAtgard" class="inline-single-value">
         <h4><span message key="fk7263.label.plannedtreatment.other"></span></h4>
         <div id="plannedtreatment.other" class="multiline">{{cert.annanAtgard}}</div>
       </div>
