INTYG-4656: Lagt till type="button" där det saknades. Utan det attributet fungerar <button> som submit och får klick-event när man trycker enter i ett helt annat inputfält på sidan - med oförutsedda effekter i GUI.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/dodsorsakMulti.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/dodsorsakMulti.formly.html
@@ -41,10 +41,10 @@
         </ui-select>
       </td>
       <td>
-        <button ng-if="$index > 0" class="btn btn-default" ng-click="deleteRow($index)"><i class="glyphicon glyphicon-minus-sign"></i></button>
+        <button type="button" ng-if="$index > 0" class="btn btn-default" ng-click="deleteRow($index)"><i class="glyphicon glyphicon-minus-sign"></i></button>
       </td>
     </tr>
   </table>
-  <button ng-disabled="model[options.key].length >= to.maxRows" class="btn btn-default" ng-click="addRow()"><i class="glyphicon glyphicon-plus-sign"></i> Lägg till sjukdom/skada</button>
+  <button type="button" ng-disabled="model[options.key].length >= to.maxRows" class="btn btn-default" ng-click="addRow()"><i class="glyphicon glyphicon-plus-sign"></i> Lägg till sjukdom/skada</button>
   <wc-field-validation field-type="dodsorsak" validations="orsakValidations"></wc-field-validation>
 </div>
