--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.consent-popover.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.consent-popover.html
@@ -1,1 +1,1 @@
-<div>Läs mer om samtycke till deltagande i pilotprojekt SRS<br><button class="btn btn-info" ng-click="readMoreConsent()">Läs mer</button></div>
+<div>Läs mer om samtycke till deltagande i pilotprojekt SRS<br><button type="button" class="btn btn-info" ng-click="readMoreConsent()">Läs mer</button></div>
