--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -37,7 +37,7 @@
                     <br>
                 </div>
                 <div class="floatRight">
-                    <button class="btn btn-info ng-binding" ng-click="redirectToAtgardExternalSite(); logAtgarderRekClicked;">Läs mer</button>
+                    <button type="button" class="btn btn-info ng-binding" ng-click="redirectToAtgardExternalSite(); logAtgarderRekClicked;">Läs mer</button>
                 </div>
             </div>
 
@@ -52,7 +52,7 @@
             </div>
             <img ng-show="statistik.statistikBild" ng-src="{{statistik.statistikBild}}" alt=""/>
             <div class="floatRight">
-                <button class="btn btn-info ng-binding" ng-click="redirectToStatistikExternalSite(); logStatistikClicked();">Läs mer</button>
+                <button type="button" class="btn btn-info ng-binding" ng-click="redirectToStatistikExternalSite(); logStatistikClicked();">Läs mer</button>
             </div>
         </div>
     
