--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcHelpChevron.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcHelpChevron.directive.html
@@ -1,5 +1,5 @@
 <div class="wc-help-chevron" ng-if="showHelp == true">
-  <button class="wc-help-chevron__button" ng-click="toggleHelp()">
+  <button type="button" class="wc-help-chevron__button" ng-click="toggleHelp()">
     <i class="glyphicon" ng-class="{'glyphicon-menu-down': isCollapsed, 'glyphicon-menu-up': !isCollapsed}"></i>
   </button>
 </div>
