INTYG-4783: Fast bredd så inte bredden ändras när man väljer alternativ.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/dodsorsakRow.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/dodsorsakRow.directive.html
@@ -28,7 +28,7 @@
             on-blur="validate()"
             add-date-parser="loose"></span>
       </div>
-      <div class="inline-block padding-top-small">
+      <div class="inline-block padding-top-small" style="width: 130px;">
         <span dynamic-label key="{{to.orsakLabel}}.RBK"></span> <span wc-help-chevron help-text-key="{{to.orsakLabel}}.HLP"></span>
         <span wc-help-chevron-text help-text-key="{{to.orsakLabel}}.HLP"></span>
         <ui-select theme="bootstrap" search-enabled="false" ng-model="modelValue.specifikation"
