INTYG-4872: Inforuta vid autoval på polisanmälan.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/info.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/info.formly.html
@@ -1,3 +1,3 @@
 <div class="alert alert-info alert-bottom">
-    <span message key="{{to.label}}"></span>
+    <span dynamic-label key="{{to.label}}"></span>
 </div>
