INTYG-4920: "Patienten har nytt personnummer" visades felaktigt så fort alternatePatientSSn skickades med i djupintegration.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -169,7 +169,7 @@
 
       <wc-intyg-has-komplettering-message></wc-intyg-has-komplettering-message>
 
-      <div wc-new-person-id-message></div>
+      <div wc-new-person-id-message patient="viewState.intygModel.grundData.patient" is-intyg="true"></div>
 
       <div wc-patient-info-change-message intyg="viewState.intygModel" intyg-properties="viewState.common.intygProperties" context="INTYG"></div>
 
