--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -82,7 +82,7 @@
             </div>
             <div class="clearfix"></div>
 
-            <div wc-new-person-id-message></div>
+            <div wc-new-person-id-message is-intyg="false"></div>
 
             <div wc-patient-info-change-message intyg="viewState.intygModel" context="UTKAST"></div>
 
