--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsHelpDisplay.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsHelpDisplay.directive.html
@@ -7,6 +7,7 @@
       </button>
       <div id="panel-wrapper-srs"
            ng-show="status.open"
+           ng-if="status.open"
            ng-class="{'srs-collapse': !status.open, 'srs-fixed-panel': !srsViewState.srsButtonVisible}">
         <div class="panel-arrow"></div>
         <div class="panel panel-srs-info">
