SRS: fixat inforutan för consent

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
@@ -10,8 +10,8 @@
     
   </div>
   <div class="panel-body">
-      <div ng-if="consentInfo">
-          <wc-srs-info-box message-string="consentInfo"></wc-srs-info-box>
+      <div ng-if="srsViewState.consentInfo">
+          <wc-srs-info-box message-string="srsViewState.consentInfo"></wc-srs-info-box>
         </div>
     <div>
       <div class="floatLeft">Patienten samtycker till att delta i SRS pilotprojektet</div>
