INTYG-4804: Ersätt KOPIERA_INTYG med FORNYA_INTYG

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -99,7 +99,7 @@
 
           <!-- Gamla KOPIERA-knappen. Har bytt namn till Förnya -->
           <button type="button"
-                  wc-authority="KOPIERA_INTYG"
+                  wc-authority="FORNYA_INTYG"
                   request-origin="!UTHOPP"
                   intygstyp="{{intygstyp}}"
                   id="fornyaBtn"
