INTYG-4644: Ny feature-hantering

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/new/arendeNew.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/new/arendeNew.directive.html
@@ -4,7 +4,7 @@
   <div class="form-group"
        ng-show="getNewArendeState() == 'new' && draftLoaded"
        wc-check-vardenhet
-       wc-authority feature="skapaNyFraga" intygstyp="{{localViewState.parentViewState.intygProperties.type}}"
+       wc-authority feature="SKAPA_NY_FRAGA" intygstyp="{{localViewState.parentViewState.intygProperties.type}}"
        vardenhet="{{localViewState.parentViewState.intyg.grundData.skapadAv.vardenhet.enhetsid}}">
       <button type="button" class="btn btn-success" ng-click="toggleArendeForm()" id="askArendeBtn">Ny fråga till
         Försäkringskassan
