--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
@@ -49,7 +49,7 @@
 
       </div>
       <div ng-if="!(viewState.common.error.activeErrorMessageKey || viewState.common.deleted)">
-        <div class="webcert-col webcert-col-secondary webcert-multicol-background-grey" wc-authority feature="hanteraFragor" intygstyp="{{widgetState.certificateType}}" ui-view="fragasvar"></div>
+        <div class="webcert-col webcert-col-secondary webcert-multicol-background-grey" wc-authority feature="HANTERA_FRAGOR" intygstyp="{{widgetState.certificateType}}" ui-view="fragasvar"></div>
       </div>
     </div>
   </div>
