--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsHelpDisplay.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsHelpDisplay.directive.html
@@ -1,7 +1,7 @@
 <div>
   <div ng-show="srsViewState.userHasSrsFeature && srsViewState.srsApplicable">
     <div id="srs">
-      <button id="{{relatedFormId}}-srs-button" type="button" ng-class="{'srs-btn6b-height-adjustment': id==='6b'}" class="btn btn-default btn-srs" ng-click="status.open = !status.open; logSrsButtonClicked(); closeFmb();">
+      <button id="{{relatedFormId}}-srs-button" type="button" class="btn btn-default btn-srs" ng-click="status.open = !status.open; logSrsButtonClicked(); closeFmb();">
         SRS 
         <i class="glyphicon srs-glyphicon" ng-class="{'glyphicon-minus-sign': status.open, 'glyphicon-plus-sign': !status.open}"></i>
       </button>
